# refactored-carnival

./: COMPATIBILIDADE.md  Dockerfile  INSTRUÇÕES_GITHUB.md  INSTRUÇÕES_GOOGLE_CLOUD.md  INSTRUÇÕES_HEROKU.md  INSTRUÇÕES_RENDER.md  LICENSE  Procfile  README.md  README_COMPATIBILIDADE.md  README_CORRECOES.md  README_INSTALACAO_RAPIDA.md  README_PERSISTENCIA.md  README_bot_completo.md  add_to_cart_handler.py  app.json  app.py  bot.py  bot_completo.py  bot_sem_github.py  catalog_manager.py  check_bot_health.sh  check_environment.py  config.py  data_manager.py  dependencias.txt  executar_bot.py  gcp_setup.sh  git_manager.py  health_check.py  heroku.yml  initialize_heroku.py  install.sh  keep_alive.py  main.py  models.py  persistent_data.py  pyproject.toml  render.yaml  requirements.txt  (+10 more)
attached_assets/: Pasted-import-logging-from-telegram-import-Update-InlineKeyboardButton-InlineKeyboardMarkup-ReplyKeyboa-1745520423572.txt
data/: carts.json  catalog.json  orders.json  users.json
handlers/: __init__.py  admin.py  cart.py  orders.py  payment.py  products.py  products_admin.py  registration.py
templates/: index.html
